AT DR1 - Lendo Arquivo cliente & ligacoes - DONE

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ release.properties
 pom.xml.releaseBackup
 pom.xml.tag
 University/dr2-java-poo/assessment/.idea/misc.xml
+University/dr1-java-fund-dev/assessment/.idea/misc.xml
