--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# ---------------
+#Legacy project format (.ipr/.iml/.iws files)
+#Share the project .ipr file and all the .iml module files, don't share the .iws file as it stores user specific settings
+!.ipr
+!.iml
+.iws
+# ---------------
+
 # Log file
 *.log
 
@@ -38,16 +46,7 @@ tomcat
 *.class
 
 # Maven 
-target/
-
-# IntelliJ project files [https://stackoverflow.com/a/40092361/8941680]
-#*.iml
-#*.iws
-#*.ipr
-*.idea/
-workspace.xml
-workspace*.xml
-
+#target/
 
 # eclipse project file
 .settings/
@@ -70,12 +69,16 @@ nb-configuration.xml
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+#-----------------------------------
 # User-specific stuff
+*workspace*.xml
+!workspace.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+#-----------------------------------
 
 # Generated files
 .idea/**/contentModel.xml
