--- a/.gitignore
+++ b/.gitignore
@@ -71,8 +71,9 @@ nb-configuration.xml
 
 #-----------------------------------
 # User-specific stuff
-*workspace*.xml
-workspace.xml
+
+*workspace.xml
+.idea/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
