--- a/Samples/Login/login-session/pom.xml
+++ b/Samples/Login/login-session/pom.xml
@@ -47,13 +47,20 @@
             <scope>runtime</scope>
         </dependency>
 
-<!--        TOMCAT -->
+<!--        TOMCAT Embed -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
 
+<!--        &lt;!&ndash; JSTL &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>javax.servlet</groupId>-->
+<!--            <artifactId>jstl</artifactId>-->
+<!--        </dependency>-->
+
+<!--    To compile JSP files -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
