--- a/Samples/Login/demo-login/src/main/resources/application.properties
+++ b/Samples/Login/demo-login/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -19,11 +18,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # spring.h2.console.settings.web-allow-others=false
 
 
-# VIEWS CONFIGS
-#spring.mvc.view.prefix:/WEB-INF/view/
-#spring.mvc.view.suffix:.jsp
+# VIEWS CONFIGS (_ MVC View Resolve Config) [https://stackoverflow.com/a/49586377/8941680]
+spring.mvc.view.prefix: /WEB-INF/view/
+spring.mvc.view.suffix: .jsp
 
 
 ## For detailed logging during development
-logging.level.org.springframework=TRACE
-logging.level.com=TRACE
+# logging.level.org.springframework=TRACE
+# logging.level.com=TRACE
