TP3 - DR4 - Java WEB
Logica de login no Front OK

--- a/University/dr4-java-web/dr4tp3/src/main/resources/application.properties
+++ b/University/dr4-java-web/dr4tp3/src/main/resources/application.properties
@@ -3,5 +3,7 @@
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 
+### LOG
+logging.level.org.springframework.web=INFO
 
 ### MYSQL ###
