--- a/University/dr4-java-web/dr4-at/src/main/resources/application.properties
+++ b/University/dr4-java-web/dr4-at/src/main/resources/application.properties
@@ -1,1 +1,47 @@
 
+# ===============================
+# = JSP Views
+# ===============================
+
+spring.mvc.view.prefix= /WEB-INF/jsp/
+spring.mvc.view.suffix= .jsp
+
+# ===============================
+# = LOG
+# ===============================
+
+logging.level.org.springframework.web=INFO
+
+# ===============================
+# = DATABASE
+# ===============================
+
+# IP EXTERNO
+spring.datasource.url=jdbc:mysql://177.148.119.35:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
+# IP LOCAL
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
+
+# MySql Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Username and password
+spring.datasource.username=naruto
+spring.datasource.password=swoordfish
+
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.use_sql_comments = true
+spring.jpa.properties.hibernate.format_sql = true
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# (NAO RECOMENDADO) !!! Hibernate ddl auto (create, create-drop, update): with "update" the database schema will be automatically updated accordingly to java entities found in the project.
+#spring.jpa.hibernate.ddl-auto = update
