AT DR4 - Java Web
Entidades - DONE

--- a/University/dr4-java-web/dr4-at/src/main/resources/application.properties
+++ b/University/dr4-java-web/dr4-at/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.level.org.springframework.web=INFO
 # ===============================
 
 # IP EXTERNO
-# spring.datasource.url=jdbc:mysql://177.148.119.35:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://177.148.119.35:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
 # IP LOCAL
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
 
@@ -44,4 +44,4 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # (NAO RECOMENDADO) !!! Hibernate ddl auto (create, create-drop, update): with "update" the database schema will be automatically updated accordingly to java entities found in the project.
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
