--- a/University/dr4-java-web/dr4-at/src/main/resources/application.properties
+++ b/University/dr4-java-web/dr4-at/src/main/resources/application.properties
@@ -44,4 +44,4 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # (NAO RECOMENDADO) !!! Hibernate ddl auto (create, create-drop, update): with "update" the database schema will be automatically updated accordingly to java entities found in the project.
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
