--- a/University/dr4-java-web/dr4-at/pom.xml
+++ b/University/dr4-java-web/dr4-at/pom.xml
@@ -36,9 +36,16 @@
             <optional>true</optional>
         </dependency>
 <!--        MySQL Database-->
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+
+<!--        H2 Database-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
 
