--- a/University/dr4-java-web/dr4-at/src/main/resources/application.properties
+++ b/University/dr4-java-web/dr4-at/src/main/resources/application.properties
@@ -6,6 +6,8 @@
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
 
+server.port=8081
+
 # ===============================
 # = LOG
 # ===============================
@@ -16,17 +18,25 @@ logging.level.org.springframework.web=INFO
 # = DATABASE
 # ===============================
 
-# IP EXTERNO
-# spring.datasource.url=jdbc:mysql://177.148.119.35:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
-# IP LOCAL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
+### >> H2 /////////////
+spring.datasource.url=jdbc:h2:file:D:\\workspaces\\home-alex\\_dev\\databases\\h2/db_alex_at
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+### CONSOLE =  http://localhost:8080/h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-allow-others=false
 
-# MySql Driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+### >> MYSQL /////////////
+##### spring.datasource.url=jdbc:mysql://177.148.119.35:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=naruto
+#spring.datasource.password=swoordfish
 
-# Username and password
-spring.datasource.username=naruto
-spring.datasource.password=swoordfish
 
 
 # ===============================
