- FIX: local do arquivo do banco pra area de trabalho - pagina de login sem modal

--- a/University/dr4-java-web/dr4-at/src/main/resources/application.properties
+++ b/University/dr4-java-web/dr4-at/src/main/resources/application.properties
@@ -19,7 +19,7 @@ logging.level.org.springframework.web=INFO
 # ===============================
 
 ### >> H2 /////////////
-spring.datasource.url=jdbc:h2:file:D:\\workspaces\\home-alex\\_dev\\databases\\h2/db_alex_at
+spring.datasource.url=jdbc:h2:file:~\\Desktop\\databases\\h2\\db_alex_at
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
