--- a/University/dr4-java-web/dr4-at/src/main/resources/application.properties
+++ b/University/dr4-java-web/dr4-at/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 ### >> H2 CONSOLE =  http://localhost:8080/h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.h2.console.settings.trace=true
+#spring.h2.console.settings.trace=true
 spring.h2.console.settings.web-allow-others=false
 
 ### >> MYSQL /////////////
